[gd_scene load_steps=3 format=3 uid="uid://1t3a2gje4de"]

[ext_resource type="PackedScene" uid="uid://c1pksiq6yj1xj" path="res://multi_switch.tscn" id="1_r6t0o"]
[ext_resource type="Script" path="res://test_board.gd" id="1_yqg6x"]

[node name="TestBoard" type="Node2D"]
script = ExtResource("1_yqg6x")

[node name="MultiSwitch" parent="." instance=ExtResource("1_r6t0o")]
position = Vector2(199, 511)
full_num = 7
pressed_times = 2
node_id = 1
neigbors = Array[int]([2])

[node name="MultiSwitch2" parent="." instance=ExtResource("1_r6t0o")]
position = Vector2(398, 513)
full_num = 8
pressed_times = 4
node_id = 2
neigbors = Array[int]([1, 3])

[node name="MultiSwitch3" parent="." instance=ExtResource("1_r6t0o")]
position = Vector2(587, 513)
full_num = 7
pressed_times = 5
node_id = 3
neigbors = Array[int]([2, 4])

[node name="MultiSwitch4" parent="." instance=ExtResource("1_r6t0o")]
position = Vector2(790, 510)
full_num = 6
node_id = 4
neigbors = Array[int]([3])
